graphql-parser/tests/snapshots/tests__fail_bad_args__parse_schema__unix.snap
---
source: graphql-parser/tests/tests.rs
expression: result
---
Err(
    ParseError(
        "Parse error at 2:10\nUnexpected `[[Punctuator]`\nExpected `Name`\n",
    ),
)
