graphql-parser/tests/snapshots/tests__fail_bad_args__parse_schema__win.snap
---
source: graphql-parser/tests/tests.rs
expression: "format!(\"{}\\n---\\n{:#?}\", & input, & parse_schema_result)"
---
query MyQuery {
  field1([something])
}

---
Err(
    ParseError(
        "Parse error at 2:10\nUnexpected `[[Punctuator]`\nExpected `Name`\n",
    ),
)
